DES-7: Fix alignment issue for large screen templates

--- a/ArticleTemplates/assets/scss/modules/_advert-slot.scss
+++ b/ArticleTemplates/assets/scss/modules/_advert-slot.scss
@@ -115,7 +115,7 @@ MPU
 
     @include mq($from: col4) {
         right: 20px;
-        top: 12px;
+        top: 18px;
     }
 
     .advert-slot__label {
