--- a/ArticleTemplates/assets/scss/modules/content/_prose.scss
+++ b/ArticleTemplates/assets/scss/modules/content/_prose.scss
@@ -327,7 +327,8 @@ Adds typographic styling, typically to content fetched from the Guardian Content
             max-width: 200px;
         }
     }
-
+    
+    .advert-slot--placeholder + *,
     *:first-child {
         margin-top: 0;
 
