--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -250,7 +250,7 @@ MPU
   @media all and (min-width: 75em) {
     .advert-slot--mpu {
       right: 20px;
-      top: 12px; } }
+      top: 18px; } }
   .advert-slot--mpu .advert-slot__label {
     margin: 0 auto;
     padding: 6px 0px 24px 6px;
