--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -2574,7 +2574,7 @@
     @media all and (min-width: 75em) {
       #sandbox .advert-slot--mpu {
         right: 20px;
-        top: 12px; } }
+        top: 18px; } }
     #sandbox .advert-slot--mpu .advert-slot__label {
       margin: 0 auto;
       padding: 6px 0px 24px 6px;
@@ -8816,8 +8816,10 @@
         margin: 0;
         margin-left: -220px;
         max-width: 200px; } }
+  #sandbox .prose .advert-slot--placeholder + *,
   #sandbox .prose *:first-child {
     margin-top: 0; }
+    #sandbox .prose .advert-slot--placeholder + * .aside,
     #sandbox .prose *:first-child .aside {
       border-top: 0;
       padding-top: 0; }
